Modification de l'url du projet

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -99,6 +99,9 @@ dataSource:
     username: sa
     password: ''
 
+server:
+  contextPath: "/TPGrails"
+
 environments:
     development:
         dataSource:
